src/pages/categoryProducts/categoryProducts.scss
@import "../../mixins.scss";

.category-products {
  height: calc(100vh - 100px);
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  margin: 10px 0;

  @include lg {
    gap: 5px;
  }

  h1 {
    font-size: 3em;
    font-weight: 600;

    @include sm {
      font-size: 2em;
    }
  }

  .products-page {
    height: 100%;
    overflow: scroll;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;

    .loading-skeleton {
      display: flex;
      width: 100%;
      padding: 10px;
      gap: 30px;
      flex-wrap: wrap;
      justify-content: center;

      .skeleton-item {
        width: 20%;
        aspect-ratio: 1;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        gap: 15px;
        padding: 15px;
        border-radius: 10px;
        box-shadow: 0px 0px 10px gray;

        @include lg {
          width: 30%;
        }

        @include md {
          width: 45%;
        }

        @include sm {
          width: 100%;
        }

        .image-block {
          height: 100%;
          width: 100%;
        }

        .title-block {
          height: 22%;
          width: 100%;
        }

        .more-details {
          height: 20%;
          width: 50%;
          border-radius: 10px;
        }
      }
    }

    .all-products {
      display: flex;
      width: 100%;
      padding: 10px;
      gap: 30px;
      flex-wrap: wrap;
      justify-content: center;

      @include lg {
        gap: 20px;
      }
    }
  }
}

